--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -104,7 +104,7 @@ section {
 
 .hero {
 
-    background-image: url("../assets/hero-bg.jpeg");
+    background-image: url("../assets//images/hero-bg.jpeg");
 
     height: 600px;
 
