--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -46,8 +46,11 @@ header nav {
 }
 
 header nav ul li {
-
-    display: inline;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 
 header nav ul li a {
@@ -56,7 +59,7 @@ header nav ul li a {
 
     font-weight: lighter;
 
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 footer {
