--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -69,11 +69,15 @@ footer {
     width: 100%;
 
     padding: 40px 35px;
+
+    display: flex;
+
+    justify-content: space-between;
+
+    flex-wrap: wrap;
 }
 
 footer h2 {
-
-    display: inline;
 
     color: #024e76;
 
@@ -83,8 +87,6 @@ footer h2 {
 }
 
 footer div {
-
-    float: right;
 
     line-height: 1.5;
 
@@ -107,13 +109,17 @@ section {
 
     background-image: url("../assets//images/hero-bg.jpeg");
 
-    height: 600px;
+    /*height: 600px;*/
 
     background-size: cover;
 
     background-position: center;
 
-    position: relative;
+    /*position: relative;*/
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .hero-form {
@@ -122,17 +128,15 @@ section {
 
     padding: 20px;
 
-    width: 500px;
-
     color:#024e76;
 
     border: solid 3px #024e76;
 
-    position: absolute;
-
     bottom: 120px;
 
     right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -180,6 +184,21 @@ section {
     padding: 10px 20px;
 
     font-size: 16px;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .intro {
