Center the section title using flexbox

--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -201,10 +201,6 @@ section {
     color: #fce138;
 }
 
-.intro {
-
-    text-align: center;
-}
 
 .intro h2 {
 
@@ -226,7 +222,6 @@ section {
 }
 
 .steps {
-    text-align: center;
     background-color: #fce138;
 }
 
@@ -241,10 +236,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 30px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -279,9 +275,9 @@ section {
     font-size: 38px;
 }
 
-.trainers {
-    text-align: center;
-}
+/*.trainers {
+    
+}*/
 
 .trainer {
     width: 900px;
@@ -329,7 +325,6 @@ section {
 .contact {
 
     background-color: #024e76;
-    text-align: center;
 
 }
 
@@ -365,4 +360,8 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
