--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -45,7 +45,7 @@ header nav {
     margin: 7px 0;
 }
 
-header nav ul li {
+header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -109,13 +109,9 @@ section {
 
     background-image: url("../assets//images/hero-bg.jpeg");
 
-    /*height: 600px;*/
-
     background-size: cover;
 
     background-position: center;
-
-    /*position: relative;*/
 
     display: flex;
     justify-content: center;
@@ -130,11 +126,8 @@ section {
 
     color:#024e76;
 
-    border: solid 3px #024e76;
+    border: 3px solid #024e76;
 
-    bottom: 120px;
-
-    right: 140px;
     width: 40%;
     margin: 3.5%;
 }
@@ -201,17 +194,6 @@ section {
     color: #fce138;
 }
 
-
-.intro h2 {
-
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid #fce138;
-    display: inline-block;
-}
-
 .intro p {
 
     line-height: 1.7;
@@ -219,18 +201,11 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
     background-color: #fce138;
-}
-
-.steps h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border: 3px solid #39a6b2;
 }
 
 .section-title {
@@ -251,14 +226,6 @@ section {
     border-color: #39a6b2;
 }
 
-/*.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}*/
 
 .step-img {
     flex: 1 12%;
@@ -286,7 +253,7 @@ section {
 }
 
 .step-text {
-    flex: 12px;
+    flex: 12;
 }
 
 .step {
@@ -295,6 +262,7 @@ section {
     width: 80%;
     border-bottom: 1px solid #39a6b2;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
@@ -304,10 +272,6 @@ section {
     flex-wrap: wrap;
     align-items: center;
 }
-
-/*.steps span {
-    font-size: 38px;
-}*/
 
 .trainers {
     width: 100%;
@@ -358,24 +322,28 @@ section {
 .contact {
 
     background-color: #024e76;
-
 }
 
 .contact h2 {
     color: #fce138;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact-info iframe {
-    width: 400px;
     height: 400px;
 }
 
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 
@@ -387,12 +355,33 @@ section {
 .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
 
 .contact-info a {
     color: #fce138;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 
 .flex-row {
