--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -55,10 +55,8 @@ header nav ul {
 
 header nav ul li a {
 
-    margin: 0 30px;
-
+    padding: 10px 15px;
     font-weight: lighter;
-
     font-size: 1.55vw;
 }
 
@@ -108,14 +106,12 @@ section {
 .hero {
 
     background-image: url("../assets//images/hero-bg.jpeg");
-
     background-size: cover;
-
     background-position: center;
-
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-form {
@@ -185,7 +181,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -209,7 +205,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -386,4 +382,8 @@ section {
 
 .flex-row {
     display: flex;
+}
+/* Media Query for Smaller Desktop Screens and Smaller */
+@media screen and (max-width: 980px) {
+    
 }
