--- a/run-buddy/assets/style.css
+++ b/run-buddy/assets/style.css
@@ -20,6 +20,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../assets//images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -31,6 +39,7 @@ header h1 {
     color: #fce138;
 
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -58,6 +67,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 footer {
@@ -112,11 +129,13 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-form {
 
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
 
     padding: 20px;
 
@@ -126,6 +145,8 @@ section {
 
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(o, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -155,6 +176,12 @@ section {
     width: 100%;
 
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -173,6 +200,7 @@ section {
     padding: 10px 20px;
 
     font-size: 16px;
+    border-radius: 10px;
 }
 
 .hero-cta {
@@ -182,12 +210,17 @@ section {
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 .intro p {
@@ -256,11 +289,17 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
+}
+/* .step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
+}*/
+.step:last-child {
+    border-bottom: none;
 }
 .step-info {
     flex: 2 70%;
@@ -368,8 +407,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
 }
-
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
 .contact-form button {
     width: 100%;
     border: none;
@@ -378,16 +422,28 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color:#fce138;
+    background: #39a6b2;
 }
 
 .flex-row {
     display: flex;
+}
+
+.some-class {
+    text-shadow: 5px 10px 15px black;
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.25);
 }
 /* Media Query for Smaller Desktop Screens and Smaller */
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1 {
         width: 100%;
@@ -416,6 +472,7 @@ section {
     .contact-info iframe {
         flex: 1 100%;
     }
+    
 }
 
 @media screen and (max-width: 768px) {
@@ -464,4 +521,20 @@ section {
         order: 3;
     }
 
+}
+/* default state */
+button {
+    background: white;
+}
+/*mouse is hovering over button */
+button:hover {
+    background: red;
+}
+/*button is in focus because it was the most reently clicked element on the page */
+button:focus {
+    background: green;
+}
+/*user is actively pressing the cursor down on the button */
+button:active {
+    background: blue;
 }
